# ACS_HW_1

./: .gitignore  CMakeLists.txt  README.md  container.cpp  container.h  functional.cpp  functional.h  languages.cpp  languages.h  main.cpp  objectOriented.cpp  objectOriented.h  procedural.cpp  procedural.h  utils.cpp  utils.h
tests/: auto_generated.txt.out  auto_generated_sorted.txt.out  functional.txt  functional_sorted.txt.out  mixed.txt  mixed.txt.out  mixed_sorted.txt..out  object_oriented.txt  object_oriented.txt.out  object_oriented_sorted.txt.out  procedular.txt  procedural.out.txt  procedural.txt  procedural_sorted.out.txt
